<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/lightBlue" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed bold"
            android:gravity="center"
            android:text="@string/ABCS_Education"
            android:textSize="24sp" />

       
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/Content_Education"
            android:src="@drawable/educate" />

        <TextView
            android:id="@+id/textView11"
            style="@style/ABCS_Text"
            android:text="@string/educate" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ResourceLinks"
            android:textSize="30sp" />

        
        
        <Button
            android:id="@+id/weblink1"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="launchWebPage1"
            android:text="@string/resourceTitle1" />

        <Button
            android:id="@+id/weblink2"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="launchWebPage2"
            android:text="@string/resourceTitle2" />

        <Button
            android:id="@+id/weblink3"
            android:layout_width="226dp"
            android:layout_height="0dip"
            android:layout_gravity="center"
            android:layout_weight="0.07"
            android:onClick="launchWebPage3"
            android:text="@string/resourceTitle3" />

        <Button
            android:id="@+id/weblink4"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="launchWebPage4"
            android:text="@string/resourceTitle4" />

      
    </LinearLayout>

</ScrollView>