<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/lightBlue" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed bold"
            android:text="@string/cholesterolCrashCourse"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/contentDescriptionChol1"
            android:src="@drawable/chol1" />

        <TextView
            style="@style/ABCS_Text"
            android:text="@string/cholesterol1" />

                <ImageView
                    android:id="@+id/imageView29"
                    android:layout_width="wrap_content"
                    android:contentDescription="@string/contentDescriptionChol2"
                    android:layout_height="wrap_content"
                    android:src="@drawable/chol2" />
        
        <TextView
            style="@style/ABCS_Text"
            android:text="@string/cholesterol2" />
        
          <Button
            android:id="@+id/weblinkCholesterol"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:onClick="launchWebPageCholesterol"
            android:text="@string/resourceTitleCholesterol" />
    </LinearLayout>

</ScrollView>