<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/lightBlue" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed bold"
            android:text="@string/bloodPressureBasics"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/bloodpressure1"
            android:contentDescription="@string/bloodPressureImage1Desc" />

        

        
        
        <TextView
            style="@style/ABCS_Text"
            android:text="@string/bloodpressure1" />

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bloodpressure"
            android:contentDescription="@string/bloodPressureImage1Desc"
             />

        

        <TextView
            style="@style/ABCS_Text"
            android:text="@string/bloodpressure2" />

        <Button
            android:id="@+id/weblinkBloodPressure"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:onClick="launchWebPageBloodPressure"
            android:text="@string/resourceTitleBloodPressure" />
    </LinearLayout>

</ScrollView>