<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/lightBlue"
    android:gravity="center" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="480dp"
        android:layout_height="480dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/mainView"
        android:src="@drawable/heartmenu" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="480dp"
        android:layout_height="480dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <ImageView
            android:id="@+id/imageButton3"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/motivation"
            android:onClick="motivatePressed" />

        <ImageView
            android:id="@+id/imageButton2"
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/education"
            android:onClick="educatePressed" />

        <ImageView
            android:id="@+id/imageButton1"
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/myHeart"
            android:onClick="editProfilePressed" />

        <TextView
            android:id="@+id/termsOfUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="2dp"
            android:clickable="true"
            android:onClick="showTermsOfUse"
            android:text="@string/terms" />
    </RelativeLayout>

</RelativeLayout>